--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,6 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>.gitignore
+        </plugins>
     </build>
 </project>
