--- a/cell-core/pom.xml
+++ b/cell-core/pom.xml
@@ -26,7 +26,17 @@
     <artifactId>cell-core</artifactId>
     <name>cell-core</name>
 
+    <properties>
+        <slf4j.version>2.0.5</slf4j.version>
+    </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
