init spec module

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 
     <modules>
         <module>cell-core</module>
+        <module>cell-specification</module>
     </modules>
 
     <properties>
