--- a/cell-spring-boot-stater/pom.xml
+++ b/cell-spring-boot-stater/pom.xml
@@ -29,6 +29,11 @@
     <name>${project.artifactId}</name>
 
     <dependencies>
+        <dependency>
+            <groupId>com.lazycece.cell</groupId>
+            <artifactId>cell-specification</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
