--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,8 @@
         <flatten.maven.plugin.version>1.2.7</flatten.maven.plugin.version>
 
         <!-- Opensource Package -->
+        <spring.boot.version>3.1.0</spring.boot.version>
         <slf4j.version>2.0.5</slf4j.version>
-        <spring.version>5.3.12</spring.version>
         <mybatis.version>3.5.13</mybatis.version>
         <mybatis-spring.version>1.2.5</mybatis-spring.version>
     </properties>
@@ -83,19 +83,16 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-tx</artifactId>
-                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis</groupId>
