--- a/pom.xml
+++ b/pom.xml
@@ -49,32 +49,34 @@
         <module>cell-core</module>
         <module>cell-specification</module>
         <module>cell-spring-boot-stater</module>
+        <module>cell-tests</module>
+        <module>cell-samples</module>
+        <module>cell-tests</module>
     </modules>
 
     <properties>
         <!-- Project revision -->
         <revision>1.0.0-SNAPSHOT</revision>
-        <!-- Encoding -->
+
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!-- Maven properties -->
+        <!-- Maven -->
         <maven.test.skip>true</maven.test.skip>
         <maven.deploy.skip>false</maven.deploy.skip>
         <maven.javadoc.skip>false</maven.javadoc.skip>
-        <!-- Compiler settings properties -->
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <!-- Maven plugin -->
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.plugin.version>3.6.2</maven.compiler.plugin.version>
         <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
         <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
-        <maven.javadoc.plugin.version>2.10.4</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.5.0</maven.javadoc.plugin.version>
         <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>
         <flatten.maven.plugin.version>1.2.7</flatten.maven.plugin.version>
 
         <!-- Opensource Package -->
-        <spring.boot.version>3.1.0</spring.boot.version>
+        <spring.boot.version>2.7.0</spring.boot.version>
         <slf4j.version>2.0.5</slf4j.version>
         <mybatis.version>3.5.13</mybatis.version>
         <mybatis-spring.version>1.2.5</mybatis-spring.version>
@@ -109,36 +111,11 @@
 
     <profiles>
         <profile>
-            <id>jdk8</id>
+            <id>jdk17</id>
             <activation>
-                <jdk>[1.8,)</jdk>
+                <jdk>[17,)</jdk>
                 <activeByDefault>true</activeByDefault>
             </activation>
-            <!-- Disable doclint under JDK 1.8 -->
-            <reporting>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>${maven.javadoc.plugin.version}</version>
-                        <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </reporting>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>${maven.javadoc.plugin.version}</version>
-                        <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
         <profile>
             <id>release</id>
@@ -162,11 +139,11 @@
             <distributionManagement>
                 <snapshotRepository>
                     <id>ossrh</id>
-                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                 </snapshotRepository>
                 <repository>
                     <id>ossrh</id>
-                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </repository>
             </distributionManagement>
         </profile>
@@ -212,12 +189,16 @@
                 <version>${maven.javadoc.plugin.version}</version>
                 <configuration>
                     <skip>${maven.javadoc.skip}</skip>
-                    <tags>
-                        <tag>
-                            <name>date</name>
-                        </tag>
-                    </tags>
+                    <additionalJOption>-tag date</additionalJOption>
                     <locale>en_US</locale>
+                    <charset>UTF-8</charset>
+                    <encoding>UTF-8</encoding>
+                    <docencoding>UTF-8</docencoding>
+                    <source>${maven.compiler.source}</source>
+                    <links>
+                        <link>http://docs.oracle.com/javase/17/docs/api</link>
+                    </links>
+                    <doclint>none</doclint>
                 </configuration>
                 <executions>
                     <execution>
