--- a/cell-tests/cell-specification-test/pom.xml
+++ b/cell-tests/cell-specification-test/pom.xml
@@ -28,4 +28,12 @@
     <artifactId>cell-specification-test</artifactId>
     <name>${project.artifactId}</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.lazycece.cell</groupId>
+            <artifactId>cell-specification</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
