--- a/cell-samples/pom.xml
+++ b/cell-samples/pom.xml
@@ -24,8 +24,28 @@
         <artifactId>cell-parent</artifactId>
         <version>${revision}</version>
     </parent>
-
     <artifactId>cell-samples</artifactId>
     <name>${project.artifactId}</name>
+    <packaging>pom</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven.deploy.plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc.plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
