--- a/cell-samples/pom.xml
+++ b/cell-samples/pom.xml
@@ -19,6 +19,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <modules>
+        <module>cell-core-sample</module>
+        <module>cell-specification-sample</module>
+        <module>cell-sping-boot-stater-sample</module>
+    </modules>
     <parent>
         <groupId>com.lazycece.cell</groupId>
         <artifactId>cell-parent</artifactId>
