--- a/cell-samples/cell-core-sample/pom.xml
+++ b/cell-samples/cell-core-sample/pom.xml
@@ -27,4 +27,24 @@
 
     <artifactId>cell-core-sample</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.lazycece.cell</groupId>
+            <artifactId>cell-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
