--- a/cell-samples/cell-spring-boot-stater-sample/pom.xml
+++ b/cell-samples/cell-spring-boot-stater-sample/pom.xml
@@ -27,4 +27,28 @@
 
     <artifactId>cell-sping-boot-stater-sample</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.lazycece.cell</groupId>
+            <artifactId>cell-spring-boot-stater</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
 </project>
