--- a/cell-samples/cell-spring-boot-stater-sample/src/main/resources/application.properties
+++ b/cell-samples/cell-spring-boot-stater-sample/src/main/resources/application.properties
@@ -15,3 +15,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # log
 logging.file.path=${app.log.path}
 logging.level.root=info
+# cell
+cell.cell-type-class=com.lazycece.cell.spring.boot.sample.model.CellEnum
+cell.buffer.expansion-step-elasticity-time=4
