--- a/cell-spring-boot-starter/pom.xml
+++ b/cell-spring-boot-starter/pom.xml
@@ -25,7 +25,7 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>cell-spring-boot-stater</artifactId>
+    <artifactId>cell-spring-boot-starter</artifactId>
     <name>${project.artifactId}</name>
 
     <dependencies>
