--- a/cell-samples/cell-spring-boot-starter-sample/src/main/resources/application.properties
+++ b/cell-samples/cell-spring-boot-starter-sample/src/main/resources/application.properties
@@ -17,4 +17,5 @@ logging.file.path=${app.log.path}
 logging.level.root=info
 # cell
 cell.cell-type-class=com.lazycece.cell.spring.boot.sample.model.CellEnum
+cell.specification.data-center=9
 cell.buffer.expansion-step-elasticity-time=4
