--- a/cell-samples/cell-spring-boot-starter-sample/src/main/resources/application.properties
+++ b/cell-samples/cell-spring-boot-starter-sample/src/main/resources/application.properties
@@ -17,5 +17,15 @@ logging.file.path=${app.log.path}
 logging.level.root=info
 # cell
 cell.cell-type-class=com.lazycece.cell.spring.boot.sample.model.CellEnum
-cell.specification.data-center=9
-cell.buffer.expansion-step-elasticity-time=4
+#cell.specification.pattern=hour
+#cell.specification.data-center=5
+#cell.specification.machine=10
+#cell.specification.min-value=12121
+#cell.specification.max-value=121210000
+#cell.specification.step=10000
+#cell.buffer.expansion-step-elasticity-time=4
+#cell.buffer.expansion-threshold=0.6
+#cell.buffer.thread-pool-keep-alive-time=70s
+#cell.buffer.expansion-interval=20m
+#cell.buffer.thread-pool-max-size=100
+#cell.buffer.thread-pool-core-size=10
